FIXED TABLE ALIGNMENT

--- a/src/app/end-of-day/table/table.component.scss
+++ b/src/app/end-of-day/table/table.component.scss
@@ -1,106 +1,108 @@
-@import '../../../styles.scss';
+@import "../../../styles.scss";
 
 .table-container {
-    min-height: 350px;
-    background-color: $white;
+  min-height: 350px;
+  background-color: $white;
 
-    table {
-        width: 100%;
-        align-self: center;
-        border-collapse: collapse;
-    
-        thead {
-            background-color: #8b8b8b;
-    
-            tr {
-                
-                th {
-                    text-align: left;
-                    color: $white;
-                    padding: 5px 0;
-                }
+  table {
+    width: 100%;
+    align-self: center;
+    border-collapse: collapse;
 
-                th:nth-of-type(1) {
-                    padding-left: 60px;
-                }
-                
-            }
+    thead {
+      background-color: #8b8b8b;
+
+      tr {
+        th {
+          text-align: left;
+          color: $white;
+          padding: 5px 20px;
+
+          &.number {
+            text-align: right;
+          }
         }
-        
-        tbody {
-            
-            tr {
-                border-bottom: 1px solid #c6c6c6;
 
-                td:nth-of-type(1) {
-                    padding-left: 60px;
-                }
-                td {
-                    font-size: 14px;
-                    text-align: left;
-                    height: 55px;
-                    width: 260px;
-                    
-                    .image {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        img {
-                            align-self: center;
-                            justify-self: center;
-                            max-height: 60px;
-                        }
-                    }
-    
-                    .action-icons {
-                        display: flex;
-                        align-items: center;
-                        justify-self: center;
-                        gap: 15px;
-                        height: 2rem;
-    
-                        img {
-                            cursor: pointer;
-                            height: 100%;
-                        }
-                    }
-                }
-            }
-    
-            
+        th:nth-of-type(1) {
+          padding-left: 60px;
         }
+      }
     }
+
+    tbody {
+      tr {
+        border-bottom: 1px solid #c6c6c6;
+
+        td:nth-of-type(1) {
+          padding-left: 60px;
+        }
+        td {
+          font-size: 14px;
+          text-align: left;
+          height: 55px;
+          width: 260px;
+          padding: 0 20px;
+
+          &.number {
+            text-align: right;
+          }
+          .image {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+              align-self: center;
+              justify-self: center;
+              max-height: 60px;
+            }
+          }
+
+          .action-icons {
+            display: flex;
+            align-items: center;
+            justify-self: center;
+            gap: 15px;
+            height: 2rem;
+
+            img {
+              cursor: pointer;
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 .pages {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin-top: .7rem;
-    gap: 10px;
-    margin-right: .7rem;
-    
-    button {
-        all: unset;
-        background-color: none;
-        font-size: 1.25rem;
-        color: #9c9c9c;
-        cursor: pointer;
-    }
-    
-    p {
-        color: #0e2d4c;
-        font-size: 1rem;
-        font-weight: 600;
-        padding-bottom: 3px;
-    }
-    
-    button:hover {
-        color: #2d56b2;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 0.7rem;
+  gap: 10px;
+  margin-right: 0.7rem;
 
-    button:disabled:hover {
-        cursor: not-allowed;
-        color: #9c9c9c;
-    }
-    
+  button {
+    all: unset;
+    background-color: none;
+    font-size: 1.25rem;
+    color: #9c9c9c;
+    cursor: pointer;
+  }
+
+  p {
+    color: #0e2d4c;
+    font-size: 1rem;
+    font-weight: 600;
+    padding-bottom: 3px;
+  }
+
+  button:hover {
+    color: #2d56b2;
+  }
+
+  button:disabled:hover {
+    cursor: not-allowed;
+    color: #9c9c9c;
+  }
 }
